fix content/player overlapping

--- a/telemeta/htdocs/css/telemeta.css
+++ b/telemeta/htdocs/css/telemeta.css
@@ -89,7 +89,7 @@ h3 {
 }
 #leftcol {
     position: relative;
-    margin-right: 345px;
+    margin-right: 399px;
     min-height: 450px;
     min-width: 400px;
 }
